--- a/fast_config.cfg
+++ b/fast_config.cfg
@@ -65,6 +65,7 @@ max_length = 0
 accumulate_gradient = 3
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
+seed = 0
 
 [training.optimizer]
 @optimizers = "Adam.v1"
