--- a/fast_config.cfg
+++ b/fast_config.cfg
@@ -65,7 +65,8 @@ max_length = 0
 accumulate_gradient = 3
 dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
-seed = 0
+seed = ${system.seed}
+gpu_allocator = ${system.gpu_allocator}
 
 [training.optimizer]
 @optimizers = "Adam.v1"
