add eval frequency and learning rate

--- a/fast_config.cfg
+++ b/fast_config.cfg
@@ -67,9 +67,11 @@ dev_corpus = "corpora.dev"
 train_corpus = "corpora.train"
 seed = ${system.seed}
 gpu_allocator = ${system.gpu_allocator}
+eval_frequency = 200
 
 [training.optimizer]
 @optimizers = "Adam.v1"
+learn_rate = 0.0001
 
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
