change learning rate

--- a/fast_config.cfg
+++ b/fast_config.cfg
@@ -71,13 +71,12 @@ eval_frequency = 200
 
 [training.optimizer]
 @optimizers = "Adam.v1"
-learn_rate = 0.0001
 
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
 warmup_steps = 250
 total_steps = 20000
-initial_rate = 5e-5
+initial_rate = 0.0001
 
 [training.batcher]
 @batchers = "spacy.batch_by_padded.v1"
