--- a/fast_config.cfg
+++ b/fast_config.cfg
@@ -71,6 +71,7 @@ eval_frequency = 200
 
 [training.optimizer]
 @optimizers = "Adam.v1"
+learn_rate = 0.001
 
 [training.optimizer.learn_rate]
 @schedules = "warmup_linear.v1"
