training parser is running - results wan't checked

--- a/base_config.cfg
+++ b/base_config.cfg
@@ -115,3 +115,10 @@ after_init = null
 [initialize.components]
 
 [initialize.tokenizer]
+
+# taken from the fast
+[training.optimizer.learn_rate]
+@schedules = "warmup_linear.v1"
+warmup_steps = 250
+total_steps = 20000
+initial_rate = 0.0001
